new, simple datapicker implemented

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
+apply plugin: 'war'
 
+war {
+    baseName = 'myapp'
+    version =  '0.0.1'
+}
 idea {
     module {
         inheritOutputDirs = false
@@ -32,13 +37,20 @@ jar {
 repositories {
     mavenLocal()
     mavenCentral()
+    jcenter()
     maven { url "https://repo.spring.io/libs-release" }
+//    maven { url "https://repo.spring.io/libs-snapshot" }
+}
+
+configurations {
+    providedRuntime
 }
 
 dependencies {
 
     //@RestController,   @RequestMapping
     compile('org.springframework.boot:spring-boot-starter-web')
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     //@Entity , @EnableJpaRepositories
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     //hot spot
@@ -47,6 +59,8 @@ dependencies {
     compile('org.ocpsoft.rewrite:rewrite-servlet:2.0.12.Final')
     //mysql driver
     compile('mysql:mysql-connector-java')
+    //spring security
+    compile 'org.springframework.security:spring-security-web:4.0.1.RELEASE'
 
     testCompile('com.h2database:h2')
     testCompile 'junit:junit-dep:4.10'
