--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.4.0",
     "ng-dropdown": "~1.0.1",
     "angular-xeditable": "~0.1.9",
-    "angularjs-toaster": "~0.4.14"
+    "angularjs-toaster": "~0.4.14",
+    "angularjs-datepicker": "~0.2.5"
   }
 }
